keyboard_input.h
@@ -140,8 +140,12 @@ private:
     InputRedirection *m_input;
     bool m_inited = false;
     QScopedPointer<Xkb> m_xkb;
-    QHash<quint32, QTimer*> m_repeatTimers;
     QMetaObject::Connection m_activeClientSurfaceChangedConnection;
+    struct {
+        quint32 key = 0;
+        quint32 time = 0;
+        QTimer *timer = nullptr;
+    } m_keyRepeat;
 };
 
 inline
